# mic-volume-fix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json
scripts/: build.bat  deploy.bat  find-qt.bat  package.bat  qt-path.bat.example
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.hpp
src/config/: LockConfig.cpp  LockConfig.hpp  SessionStore.cpp  SessionStore.hpp
src/guardian/: GuardianWorker.cpp  GuardianWorker.hpp
src/gui/: EnumeratorWorker.cpp  EnumeratorWorker.hpp  MainWindow.cpp  MainWindow.hpp
src/win/: StartupRegistry.cpp  StartupRegistry.hpp
